--- a/k8s/webpage.yaml
+++ b/k8s/webpage.yaml
@@ -1,4 +1,4 @@
-apiVersion: "sample.javaoperatorsdk/v1"
+apiVersion: "info.magnolia.k8s.javaoperatorsdk/v1"
 kind: WebPage
 metadata:
   name: hellowp
