--- a/k8s/test-resource.yaml
+++ b/k8s/test-resource.yaml
@@ -2,5 +2,6 @@ apiVersion: "info.magnolia.k8s.javaoperatorsdk/v1"
 kind: UpdatedValue
 metadata:
   name: test1
+  namespace: "k8s.io"
 spec:
   value: test
