--- a/k8s/serviceExample/deployment.yaml
+++ b/k8s/serviceExample/deployment.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world
+  labels:
+    app: hello-world
 spec:
-  replicas: 2
+  replicas: 4
   selector:
     matchLabels:
       app: hello-world
